# OS_BSU

./: .gitmodules  README.md
Lab_1/: CMakeLists.txt  README.md  creator.cpp  main.cpp
Lab_1/include/: employee.h
Lab_1/src/: creator.cpp  reporter.cpp
Lab_1/tests/: tests.cpp
Lab_2/: CMakeLists.txt  README.md  main.cpp  parameters.h
Lab_2/include/: parameters.h
Lab_2/src/: main.cpp  parameters.cpp
Lab_2/tests/: tests.cpp
Lab_3/: CMakeLists.txt  README.md  main.cpp  worker.cpp
Lab_3/include/: worker.h
Lab_3/tests/: CMakeLists.txt  tests.cpp
Lab_4/: CMakeLists.txt  README.md  receiver.cpp  sender.cpp
Lab_4/include/: sendMsg.h
Lab_4/src/: sendMsg.cpp  sender.cpp
Lab_4/tests/: tests.cpp
Lab_5/: .gitignore  CMakeLists.txt  README.md
Lab_5/include/: employee.h
Lab_5/src/: employee.cpp  server.cpp
Lab_5/tests/: tests.cpp
